# server_rust_api_rest_project_cp3

./: .env  Cargo.toml  README.md
migrations/: 20231008025235_add_user_auth_model.down.sql  20231008025235_add_user_auth_model.up.sql  20231008201027_add_access_tocken_auth_user_model.down.sql  20231008201027_add_access_tocken_auth_user_model.up.sql  20231113025219_init.down.sql  20231113025219_init.up.sql  20231113033216_add_foreign_key_to_admin_model.down.sql  20231113033216_add_foreign_key_to_admin_model.up.sql  20231113041301_add_customer_model.down.sql  20231113041301_add_customer_model.up.sql  20231113045509_add_product_model.down.sql  20231113045509_add_product_model.up.sql  20231113053531_remove_field_product_model.up.sql  20231113232258_add_order_model.down.sql  20231113232258_add_order_model.up.sql  20231114002138_removeorder_date_order_model.down.sql  20231114002138_removeorder_date_order_model.up.sql
src/: controllers.rs  error.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
src/controllers/: admin.rs  auth.rs  auth_user.rs  customer.rs  healthChecker.rs  health_checker.rs  note.rs  order.rs  product.rs
src/controllers/admin/: create.rs  delete.rs  get_all.rs  get_by_id.rs  update.rs
src/controllers/auth_user/: create.rs  delete.rs  get_all.rs  get_by_access_token.rs  get_by_id.rs  login.rs  update.rs
src/controllers/customer/: create.rs  delete.rs  get_all.rs  (+2 more)
src/models/: admin.rs  auth.rs  auth_user.rs  customer.rs  order.rs  product.rs
src/schema/: admin.rs  auth_user.rs  customer.rs  order.rs  product.rs
src/utils/: fn_password.rs
(+15 files in other folders)
